<resources>
    <string name="app_name">Live Chat</string>

    <string name="message">Message</string>
    <string name="message_description">Message description</string>

    <string name="incoming_call">Incoming call</string>
    <string name="incoming_call_description">Incoming call description</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="login">Login</string>
    <string name="login_success">Login success</string>
    <string name="signup_success">Signup success</string>
    <string name="sign_out">Sign out</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_now"><u>Sign Up Now</u></string>
    <string name="back">Back</string>
    <string name="chats">Chats</string>
    <string name="contacts">Contacts</string>
    <string name="search">Search</string>
    <string name="no_result">No result</string>
    <string name="type_a_message">Type a message</string>
    <string name="forgot_password">Forgot password</string>
    <string name="forgot_password_u"><u>Forgot password?</u></string>
    <string name="reset">Reset</string>
    <string name="send_email_success">Send email success</string>
    <string name="image">Image</string>
    <string name="profile">Profile</string>
    <string name="success">Success</string>
    <string name="error">Error</string>
    <string name="media">Media</string>
    <string name="camera">Camera</string>
    <string name="location">Location</string>
    <string name="send_location">Send Location</string>
    <string name="done">Done</string>
    <string name="maximum_total_file_size">Maximum total file size is 50MB.</string>
    <string name="start_download">Start download</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="is_calling">is calling</string>
    <string name="do_not_have_camera_and_microphone_permission_to_join_the_call">Do not have camera and microphone permission to join the call</string>
    <string name="open_permissions_settings">Open permissions settings</string>
    <string name="ringing">Ringing</string>
    <string name="please_enter_email">Please enter the email address you\'d like your password reset information sent to</string>
    <string name="wait_1_minute">Wait 1 minute to send another email</string>
    <string name="invalid_email_address">Invalid email address</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="or">OR</string>
    <string name="full_name_is_empty">Full name is empty</string>
    <string name="name_is_empty">Name is empty</string>
    <string name="email_is_empty">Email is empty</string>
    <string name="password_is_empty">Password is empty</string>
    <string name="full_name">Full name</string>
    <string name="name">Name</string>
    <string name="password_validate">Password must have at least 8 characters, 1 letter and 1 digit</string>
    <string name="passwords_do_not_match">Passwords do NOT match</string>
    <string name="confirm_your_email_address">Confirm your email address</string>
    <string name="we_sent_email">We sent a confirm email to:</string>
    <string name="check_your_email">Check your email and click on the confirmation link to verify your email</string>
    <string name="settings">Settings</string>
    <string name="sign_out_error">Sign out error</string>
    <string name="content_and_tools">Content and tools</string>
    <string name="call">Call</string>
    <string name="called_from">Called from</string>
    <string name="no_internet">No internet</string>
    <string name="can_not_choose_media">Can not choose media</string>
    <string name="can_not_start_video_call">Can not start video call</string>
    <string name="choose_only">Choose only</string>
    <string name="file">file</string>
    <string name="user_name">User name</string>
    <string name="update_user_name">Update user name</string>
    <string name="update_password">Update password</string>
    <string name="privacy">Privacy</string>
    <string name="notifications">Notifications</string>
    <string name="copy">Copy</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
    <string name="this_user_name_has_already_been_taken">This user name has already been taken</string>
    <string name="delete">Delete</string>
    <string name="delete_message">Delete message</string>
    <string name="delete_confirm">Are you sure you want to delete this message?</string>
    <string name="send_some_messages">Send some messages to connect with</string>
    <string name="want_to_chat_with_you">want to chat with you</string>
    <string name="block">Block</string>
    <string name="unblock">Unblock</string>
    <string name="you_can_not_reply">You can not reply this chat</string>
    <string name="block_user">Block user</string>
    <string name="unblock_user">Unblock user</string>
    <string name="block_user_confirm">Are you sure you want to block this user?</string>
    <string name="choose_location">Choose your location first</string>
    <string name="current_location">Current location</string>
    <string name="another_call_is_in_progress">Another call is in progress</string>
    <string name="create_group_chat">Create group chat</string>
    <string name="group_name">Group name</string>
    <string name="people">People</string>
    <string name="group_name_can_not_blank">Group name can not blank</string>
    <string name="create_new_group_chat">create new group chat</string>
    <string name="participant">participant</string>
    <string name="participants">participants</string>
</resources>
