<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".view.alert_dialog.UpdatePasswordAlertDialog">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvTitle"
            style="@style/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/update_user_name"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle">

            <EditText
                android:id="@+id/etOldPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/cl_main"
                android:hint="@string/old_password"
                android:inputType="textPassword"
                android:maxLines="1"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/etNewPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:backgroundTint="@color/cl_main"
                android:hint="@string/new_password"
                android:inputType="textPassword"
                android:maxLines="1"
                app:layout_constraintTop_toBottomOf="@id/etOldPassword" />

            <EditText
                android:id="@+id/etNewPasswordConfirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:backgroundTint="@color/cl_main"
                android:hint="@string/confirm_new_password"
                android:inputType="textPassword"
                android:maxLines="1"
                app:layout_constraintTop_toBottomOf="@id/etNewPassword" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/clContent">

            <TextView
                android:id="@+id/tvCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:foreground="?selectableItemBackground"
                android:padding="15dp"
                android:text="@string/cancel"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvUpdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:foreground="?selectableItemBackground"
                android:padding="15dp"
                android:text="@string/update"
                android:textColor="@color/cl_main"
                android:textStyle="bold" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
